--- a/README
+++ b/README
@@ -1,1 +1,4 @@
+Althogh ezPush does not officially provide client side libraries you can find example code that can help you get started these code examples are provided with no warnety and no support they are just examples to help you get started understending the basic steps to integrate with ezPush, you are welcome to contribute and improve it.
+
+
 Please read the getting started guide found in the wiki pages 
